Make sure the text doesn't wrap in the ad.

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -87,7 +87,7 @@ body .one .bsa_it_ad:hover img {
 body .one .bsa_it_ad .bsa_it_i {
 	display: block;
 	float: left;
-	margin: 0 15px 0 0;
+	margin: 0 15px 10px 0;
 }
 body .one .bsa_it_ad .bsa_it_i img {
 	border: none;
